module(
    name = "spring_boot_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "0.0.0")
local_path_override(
    module_name = "rules_jvm_external",
    path = "../..",
)

# Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.hamcrest:hamcrest-library:3.0",
        "org.springframework.boot:spring-boot-autoconfigure:4.0.6",
        "org.springframework.boot:spring-boot-restclient:4.0.6",
        "org.springframework.boot:spring-boot-resttestclient:4.0.6",
        "org.springframework.boot:spring-boot-test-autoconfigure:4.0.6",
        "org.springframework.boot:spring-boot-test:4.0.6",
        "org.springframework.boot:spring-boot:4.0.6",
        "org.springframework.boot:spring-boot-starter-web:4.0.6",
        "org.springframework.boot:spring-boot-webmvc-test:4.0.6",
        "org.springframework:spring-beans:7.0.7",
        "org.springframework:spring-context:7.0.7",
        "org.springframework:spring-test:7.0.7",
        "org.springframework:spring-web:7.0.7",
    ],
    fetch_sources = True,
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
