java_library(
    name = "lib",
    srcs = glob(["*.java"]),
    visibility = ["//src/test:__subpackages__"],
    deps = [
        "@pinned_maven//:org_springframework_boot_spring_boot",
        "@pinned_maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@pinned_maven//:org_springframework_boot_spring_boot_starter_web",
        "@pinned_maven//:org_springframework_spring_context",
        "@pinned_maven//:org_springframework_spring_web",
    ],
)

java_binary(
    name = "app",
    main_class = "hello.Application",
    runtime_deps = [
        ":lib",
    ],
)
