java_test(
    name = "HelloControllerTest",
    srcs = ["HelloControllerTest.java"],
    test_class = "hello.HelloControllerTest",
    deps = [
        "//src/main/java/hello:lib",
        "@pinned_maven//:org_hamcrest_hamcrest_library",
        "@pinned_maven//:org_springframework_boot_spring_boot_test",
        "@pinned_maven//:org_springframework_boot_spring_boot_test_autoconfigure",
        "@pinned_maven//:org_springframework_spring_beans",
        "@pinned_maven//:org_springframework_spring_test",
        "@pinned_maven//:org_springframework_spring_web",
    ],
)

java_test(
    name = "HelloControllerIntegrationTest",
    srcs = ["HelloControllerIT.java"],
    test_class = "hello.HelloControllerIT",
    deps = [
        "//src/main/java/hello:lib",
        "@pinned_maven//:org_hamcrest_hamcrest_library",
        "@pinned_maven//:org_springframework_boot_spring_boot",
        "@pinned_maven//:org_springframework_boot_spring_boot_test",
        "@pinned_maven//:org_springframework_spring_beans",
        "@pinned_maven//:org_springframework_spring_test",
        "@pinned_maven//:org_springframework_spring_web",
    ],
)
