load("//:defs.bzl", "artifact")

java_library(
    name = "resolver",
    srcs = glob(
        ["*.java"],
        exclude = glob(["*Test.java"]),
    ),
    deps = [
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/events",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/netrc",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/ui",
        artifact(
            "com.google.guava:guava",
            repository_name = "rules_jvm_external_deps",
        ),
        artifact(
            "junit:junit",
            repository_name = "regression_testing",
        ),
        artifact(
            "org.apache.maven:maven-model",
            repository_name = "rules_jvm_external_deps",
        ),
    ],
)

java_test(
    name = "MavenResolverTest",
    size = "medium",
    srcs = ["MavenResolverTest.java"],
    test_class = "com.github.bazelbuild.rules_jvm_external.resolver.MavenResolverTest",
    deps = [
        ":resolver",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/events",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/maven",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/netrc",
        artifact(
            "junit:junit",
            repository_name = "regression_testing",
        ),
    ],
)

java_test(
    name = "GradleResolverTest",
    size = "medium",
    srcs = ["GradleResolverTest.java"],
    test_class = "com.github.bazelbuild.rules_jvm_external.resolver.GradleResolverTest",
    deps = [
        ":resolver",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/events",
        # TODO: This really shouldn't be needed, but apparently `@gradle` is missing deps
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/maven",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/netrc",
        artifact(
            "junit:junit",
            repository_name = "regression_testing",
        ),
    ],
)
