load("@rules_java//java:defs.bzl", "java_test")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_test(
    name = "GradleBuildScriptGeneratorTest",
    srcs = ["GradleBuildScriptGeneratorTest.java"],
    data = [
        "//tests/com/github/bazelbuild/rules_jvm_external/resolver/gradle/testdata",
    ],
    test_class = "com.github.bazelbuild.rules_jvm_external.resolver.gradle.GradleBuildScriptGeneratorTest",
    deps = [
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle/models",
        artifact(
            "junit:junit",
            repository_name = "regression_testing_coursier",
        ),
        "@bazel_tools//tools/java/runfiles",
    ],
)
