load("@rules_java//java:defs.bzl", "java_test")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_test(
    name = "GradleResolverTest",
    srcs = [
        "GradleResolverTest.java",
    ],
    data = [
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle/data:gradle_build_templates",
        "//tests/com/github/bazelbuild/rules_jvm_external/resolver/gradle/testdata",
    ],
    test_class = "com.github.bazelbuild.rules_jvm_external.resolver.gradle.GradleResolverTest",
    deps = [
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/cmd",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/events",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle/models",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/netrc",
        "//tests/com/github/bazelbuild/rules_jvm_external/resolver",
        artifact(
            "junit:junit",
            repository_name = "regression_testing_coursier",
        ),
        "@bazel_tools//tools/java/runfiles",
    ],
)

#java_test(
#    name = "GradleBuildScriptGeneratorTest",
#    srcs = [
#        "GradleBuildScriptGeneratorTest.java",
#    ],
#    data = [
#        "//tests/com/github/bazelbuild/rules_jvm_external/resolver/gradle/testdata",
#    ],
#    test_class = "com.github.bazelbuild.rules_jvm_external.resolver.gradle.GradleBuildScriptGeneratorTest",
#    deps = [
#        "//private/tools/java/com/github/bazelbuild/rules_jvm_external",
#        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver",
#        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/cmd",
#        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/events",
#        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle",
#        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle/models",
#        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/netrc",
#        "//tests/com/github/bazelbuild/rules_jvm_external/resolver",
#        artifact(
#            "junit:junit",
#            repository_name = "regression_testing_coursier",
#        ),
#        "@bazel_tools//tools/java/runfiles",
#    ],
#)
