filegroup(
    name = "fixtures",
    srcs = [
        "jvmAndAndroidVariants/sample-1.0.module",
        "jvmAndAndroidVariants/sample-android-1.0.module",
        "jvmAndAndroidVariants/sample-jvm-1.0.module",
        "simpleJvmVariant/sample-1.0.module",
        "simpleJvmVariant/sample-jvm-1.0.module",
    ],
    visibility = ["//tests/com/github/bazelbuild/rules_jvm_external:__subpackages__"],
)
