load("//:defs.bzl", "artifact")

java_library(
    name = "gradle",
    srcs = glob(["*.java"]),
    data = [
        "@gradle//:distribution",
        "@gradle//:gradle-bin/README",
    ],
    resources = [
        "init.gradle",
    ],
    visibility = [
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver:__subpackages__",
        "//tests/com/github/bazelbuild/rules_jvm_external/resolver:__subpackages__",
    ],
    deps = [
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/events",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle/model",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle/plugin",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/netrc",
        "@bazel_tools//tools/java/runfiles",
        "@gradle",
        artifact(
            "com.google.guava:guava",
            repository_name = "rules_jvm_external_deps",
        ),
    ],
)
